....I..... [ZBX-8658] made various changes to ODBC related m4 scripts to improve readability and library function availability (Juris)

--------------------------------------------------------------------------------
Changes for 2.4.2rc1

New features:
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)

Bug fixes:
........S. [ZBX-8754] fixed crash in escalator when processing an alert without an user, but with a media type set (wiper)

--------------------------------------------------------------------------------
Changes for 2.4.1rc2

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, German and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8847] fixed mass actions in lists only affecting the selected elements on the current page (Pavels)

--------------------------------------------------------------------------------
Changes for 2.4.1rc1

Bug fixes:
..F....... [ZBX-8784] fixed link to the latest data page from the map pop up menu (Pavels)
..F....... [ZBX-8665] fixed incorrect display of period in graph filter time bar, dragging the scrollbar beyond year 1970 and calendar months to run in loop for years 1970 and 2038 (Ivo)
..F....... [ZBX-8802] fixed missing sub-menu icon in global script menu (Krists)
.......PS. [ZBX-8825] fixed character "#" being replaced with "<>" in low-level discovery macros during database upgrade (asaveljevs)
...G...... [ZBX-8822] fixed vm.memory.size[] items being unsupported on FreeBSD (asaveljevs)
..F....... [ZBX-8693] fixed "Add" button in Configuration->Triggers->Create Trigger->Add for IE11 (arvids)
........S. [ZBX-8815] fixed adding of host groups to the host by discovery action (Sasha)
..F....... [ZBX-8816] removed "clear history & trends" button from template web scenarios (arvids)
..F....... [ZBX-8727] fixed item multiplier value validation to support scientific notation correctly (Krists)